# entity

./: .gitignore  .travis.yml  Dockerfile  README.md  composer.json  docker-compose.yml
dome/: boot.php  orm.php
dome/lib/: DomeDB.php  DomeDBResult.php  DomeEntityTest.php  DomeFilterCallback.php  DomeModelTest.php  DomeVaildCallback.php  DomeVaildNum.php  DomeVaildStrlen.php
ext/: .gitignore  CMakeLists.txt  config.m4  config.w32  entity.c  entity.php  php_entity.h
ext/src/: class_column.c  class_column.h  class_column_save.c  class_column_save.h  class_column_set.c  class_column_set.h  class_db.c  class_db.h  class_db_builder.c  class_db_builder.h  class_db_result.c  class_db_result.h  class_db_sqlbuilder.c  class_db_sqlbuilder.h  class_db_sqlruner.c  class_db_sqlruner.h  class_entity.c  class_entity.h  class_entity_column_set.c  class_entity_column_set.h  class_entity_set.c  class_entity_set.h  class_exception.c  class_exception.h  class_filter.c  class_filter.h  class_filter_rule.c  class_filter_rule.h  class_filter_rule_callback.c  class_filter_rule_callback.h  class_i18n.c  class_i18n.h  class_table.c  class_table.h  class_validation.c  class_validation.h  class_validation_rule.c  class_validation_rule.h  class_validation_rule_callback.c  class_validation_rule_callback.h  (+7 more)
ext/tests/: 001.php  0010.php  002.php  002.phpt  003.php  003.phpt  004.php  004.phpt  005.php  005.phpt  006.php  007.php  008.php  009.php
src/classes/LSYS/: Entity.php
tests/: autoload.php  dome.php  phpunit.xml
tests/config/: database.php  redis.php
tests/db/: hi.db
(+32 files in other folders)
